plugins/kotlin/idea/tests/testData/highlighterMetaInfoWithBundledCompilerPlugins/lombok.kt.highlighting
// COMPILER_ARGUMENTS: -Xplugin=$TEST_DIR/lombok_fake_plugin.jar
// FILE: main.kt
package test

<!HIGHLIGHTING("textAttributesKey='KOTLIN_KEYWORD'")!>import<!> <!HIGHLIGHTING("textAttributesKey='KOTLIN_CLASS'")!>JavaValueClass<!>

fun <!HIGHLIGHTING("textAttributesKey='KOTLIN_FUNCTION_DECLARATION'")!>test<!>(<!HIGHLIGHTING("textAttributesKey='KOTLIN_PARAMETER'")!>value<!>: <!HIGHLIGHTING("textAttributesKey='KOTLIN_CLASS'")!>JavaValueClass<!>) {
    val <!HIGHLIGHTING("textAttributesKey='KOTLIN_LOCAL_VARIABLE'")!>saved<!>: <!HIGHLIGHTING("textAttributesKey='KOTLIN_CLASS'")!>String<!> = <!HIGHLIGHTING("textAttributesKey='KOTLIN_PARAMETER'")!>value<!>.<!HIGHLIGHTING("textAttributesKey='KOTLIN_SYNTHETIC_EXTENSION_PROPERTY'")!>foo<!>
    <!HIGHLIGHTING("textAttributesKey='KOTLIN_PARAMETER'")!>value<!>.<!HIGHLIGHTING("textAttributesKey='KOTLIN_SYNTHETIC_EXTENSION_PROPERTY'")!>bar<!> = <!HIGHLIGHTING("textAttributesKey='KOTLIN_LOCAL_VARIABLE'")!>saved<!>
}
